@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class VaccinationCenter {
  - name
  - address
  - emailAddress
  - phoneNumber
  - faxNumber
  - websiteAddress
  - openingHours
  - closingHours
  - slotDuration
  - maxVaccines
  - coordinator
}

class HealthCareCenter {
  - name
    - address
    - emailAddress
    - phoneNumber
    - faxNumber
    - websiteAddress
    - openingHours
    - closingHours
    - slotDuration
    - maxVaccines
    - coordinator
    -AGES
    -ARS
  }


class Administrator {
-username
-email
-password
}

Company "1"---"*" Administrator : knows >
Administrator "1"--"*" VaccinationCenter : registers >
Administrator "1"--"*" HealthCareCenter : registers >





@enduml